--- a/FirmwareMain.ioc
+++ b/FirmwareMain.ioc
@@ -5,9 +5,10 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=UART4
-Mcu.IP4=USART3
-Mcu.IPNb=5
+Mcu.IP3=TIM3
+Mcu.IP4=UART4
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32F100R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -30,25 +31,27 @@ Mcu.Pin23=PC6
 Mcu.Pin24=PC7
 Mcu.Pin25=PC8
 Mcu.Pin26=PC9
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PC10
-Mcu.Pin32=PC11
-Mcu.Pin33=PC12
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=VP_SYS_VS_ND
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PC12
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=VP_SYS_VS_ND
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 Mcu.UserConstants=
 Mcu.UserName=STM32F100RETx
 MxCube.Version=4.23.0
@@ -62,13 +65,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=GPIO_Output
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.Locked=true
@@ -78,9 +82,11 @@ PA12.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.Locked=true
-PA3.Signal=GPIO_Input
+PA3.Signal=GPIO_Output
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB0.Locked=true
@@ -176,7 +182,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_UART4_Init-UART4-false-HAL,4-MX_USART3_UART_Init-USART3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_UART4_Init-UART4-false-HAL,4-MX_USART3_UART_Init-USART3-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -195,6 +201,9 @@ RCC.PLLMUL=RCC_PLL_MUL6
 RCC.SYSCLKFreq_VALUE=24000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
 RCC.TimSysFreq_Value=24000000
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=49
+TIM3.Prescaler=23
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USART3.IPParameters=VirtualMode
@@ -203,4 +212,6 @@ VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=FirmwareMain
