--- a/FirmwareMain.ioc
+++ b/FirmwareMain.ioc
@@ -6,9 +6,10 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM3
-Mcu.IP4=UART4
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP4=TIM6
+Mcu.IP5=UART4
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F100R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -16,42 +17,46 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA1
 Mcu.Pin11=PA2
 Mcu.Pin12=PA3
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB13
-Mcu.Pin21=PB14
-Mcu.Pin22=PB15
-Mcu.Pin23=PC6
-Mcu.Pin24=PC7
-Mcu.Pin25=PC8
-Mcu.Pin26=PC9
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin20=PB1
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PB13
+Mcu.Pin24=PB14
+Mcu.Pin25=PB15
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PC10
-Mcu.Pin33=PC11
-Mcu.Pin34=PC12
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
-Mcu.Pin37=VP_SYS_VS_ND
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PB6
+Mcu.Pin39=PB7
 Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin40=VP_SYS_VS_ND
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=40
+Mcu.PinsNb=44
 Mcu.UserConstants=
 Mcu.UserName=STM32F100RETx
 MxCube.Version=4.23.0
@@ -66,6 +71,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -83,6 +89,12 @@ PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.Locked=true
 PA3.Signal=GPIO_Output
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Input
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.Locked=true
@@ -106,7 +118,7 @@ PB14.Signal=GPIO_Output
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB6.Locked=true
-PB6.Signal=GPIO_Analog
+PB6.Signal=GPIO_Output
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PC0.Locked=true
@@ -182,7 +194,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_UART4_Init-UART4-false-HAL,4-MX_USART3_UART_Init-USART3-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_UART4_Init-UART4-false-HAL,4-MX_USART3_UART_Init-USART3-false-HAL,5-MX_TIM6_Init-TIM6-false-HAL,6-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -204,6 +216,9 @@ RCC.TimSysFreq_Value=24000000
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=49
 TIM3.Prescaler=23
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=49
+TIM6.Prescaler=23
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USART3.IPParameters=VirtualMode
@@ -214,4 +229,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=FirmwareMain
